SynProdGITV1/force-app/main/default/objects/Case/fields/Reminder_Notifications_Sent__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Notifications_Sent__c</fullName>
    <description>This field is used in the &quot;Case - Scheduled Notify Status Not Completed Over 40 Days&quot; flow to track which reminder notifications have been sent. It helps ensure notifications are not repeated and updates automatically based on the notification type triggered. This field is not visible to users.</description>
    <label>Reminder Notifications Sent</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>40 Days</fullName>
            </value>
            <value>
                <fullName>50 Days</fullName>
            </value>
            <value>
                <fullName>60 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>