SynProdGITV1/force-app/main/default/objects/Case/fields/Repeated_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Repeated_Complaint__c</fullName>
    <description>Checkbox indicating whether the issue reported in this case has occurred previously for the same customer, product, or situation.</description>
    <inlineHelpText>Select this checkbox if the complaint is a repeat of an issue that has been previously raised.</inlineHelpText>
    <label>Repeated Complaint</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>