SynProdGITV1/force-app/main/default/objects/Case/fields/Reported_By__c.field-meta.xml
<CustomField>
    <fullName>Reported_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reported By</description>
    <label>Reported By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>