SynProdGITV1/force-app/main/default/objects/Case/fields/RHQ_Account__c.field-meta.xml
<CustomField>
    <fullName>RHQ_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SS2-T71 : This field will store RHQ Account from Related Account</description>
    <label>RHQ Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>RHQ</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>