SynProdGITV1/force-app/main/default/objects/Case/fields/Root_Cause_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Analysis__c</fullName>
    <description>Captures a detailed analysis of the root cause(s) behind the issue or complaint.</description>
    <inlineHelpText>Provide a detailed explanation of the root cause(s) identified during the investigation.</inlineHelpText>
    <label>Root Cause Analysis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>