SynProdGITV1/force-app/main/default/objects/Case/fields/S4_Order__c.field-meta.xml
<CustomField>
    <fullName>S4_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Use this field for S4 system orders only. For non-S4 orders, use the &quot;Order Number&quot; field.</description>
    <inlineHelpText>Use this field for S4 system orders only. For non-S4 orders, use the &quot;Order Number&quot; field.</inlineHelpText>
    <label>S4 Order</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Order.Type</field>
            <operation>equals</operation>
            <value>ZOR - Sales Order</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>