SynProdGITV1/force-app/main/default/objects/Case/fields/SAP_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>SAP_Product_Id__c</fullName>
    <description>This field is created to display the SAP Product ID in case reports. It will be hidden from the user interface.</description>
    <formula>Product__r.Product_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Product Id</label>
    <type>Text</type>
</CustomField>