SynProdGITV1/force-app/main/default/objects/Case/fields/Secondary_Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Root_Cause__c</fullName>
    <description>Captures additional contributing factors or secondary root causes related to the issue or complaint.</description>
    <inlineHelpText>Select the secondary cause or contributing factor to the issue</inlineHelpText>
    <label>Secondary Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Act Of Nature</fullName>
            </value>
            <value>
                <fullName>Capability</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Communicable Disease</fullName>
            </value>
            <value>
                <fullName>Defect</fullName>
            </value>
            <value>
                <fullName>Human Element</fullName>
            </value>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Knowledge</fullName>
            </value>
            <value>
                <fullName>Material</fullName>
            </value>
            <value>
                <fullName>MoC</fullName>
            </value>
            <value>
                <fullName>Practices</fullName>
            </value>
            <value>
                <fullName>Recipes/Formulation</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>No Cause</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Inventory Management</fullName>
            </value>
            <value>
                <fullName>Regulatory/Environmental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>