SynProdGITV1/force-app/main/default/objects/Case/fields/Service_Team__c.field-meta.xml
<CustomField>
    <fullName>Service_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup Of Service Team Object</description>
    <inlineHelpText>Select the Service Team assigned to this case</inlineHelpText>
    <label>Service Team</label>
    <referenceTo>Service_Team__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>