SynProdGITV1/force-app/main/default/objects/Case/fields/Service_Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Team_Name__c</fullName>
    <description>This field is auto-determined based on the service team name. This field is used in sharing settings.</description>
    <label>Service Team Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>