SynProdGITV1/force-app/main/default/objects/Case/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>Automatically classifies the case severity based on the total complaint cost rolled up from related complaint records: Very High (&gt;200K€), High (&gt;30K€), Medium (&gt;3K€), Low (&lt;3K€).</description>
    <formula>IF( (Total_Cost__c/CURRENCYRATE(TEXT(CurrencyIsoCode))) * CURRENCYRATE(&apos;EUR&apos;)  &gt; 200000, &quot;Very High&quot;,
  IF((Total_Cost__c/CURRENCYRATE(TEXT(CurrencyIsoCode))) * CURRENCYRATE(&apos;EUR&apos;) &gt; 30000, &quot;High&quot;,
    IF((Total_Cost__c/CURRENCYRATE(TEXT(CurrencyIsoCode))) * CURRENCYRATE(&apos;EUR&apos;)  &gt; 3000, &quot;Medium&quot;, 
      &quot;Low&quot;
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Select the severity level of the issue to guide prioritization and response time.</inlineHelpText>
    <label>Severity</label>
    <type>Text</type>
</CustomField>