SynProdGITV1/force-app/main/default/objects/Case/fields/Status_Number__c.field-meta.xml
<CustomField>
    <fullName>Status_Number__c</fullName>
    <formula>CASE( TEXT( Status )  , 
&apos;Open&apos;, 10,
&apos;Initial Review&apos;, 20,
&apos;Investigation&apos;, 30,
&apos;Customer Feedback&apos;, 40,
&apos;Corrective Action Implementation&apos;, 50,
&apos;Completed&apos;, 60,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>