SynProdGITV1/force-app/main/default/objects/Case/fields/Target_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Close_Date__c</fullName>
    <description>If the related Account&apos;s Group_Key__c matches the value stored in the custom metadata Henkle_Group_Key, the target date is calculated as Created Date + Henkel Case Close KPI Days (from custom metadata).
Otherwise, it uses Created Date + Case Close KPI Days.</description>
    <formula>IF(
  CONTAINS(
    Account.Group_Key__c,
    $CustomMetadata.Name_Value_Pair__mdt.Henkel_Group_Key.Value__c
  ),
  CreatedDate + 
    VALUE($CustomMetadata.Name_Value_Pair__mdt.Henkel_Case_Close_KPI_Days.Value__c),
  CreatedDate + 
    VALUE($CustomMetadata.Name_Value_Pair__mdt.Case_Close_KPI_Days.Value__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Close Date</label>
    <type>Date</type>
</CustomField>