SynProdGITV1/force-app/main/default/objects/Case/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <description>Addition of price of child object complaint cost&apos;s price field</description>
    <inlineHelpText>Enter the complete cost incurred in resolving the case.</inlineHelpText>
    <label>Total Cost</label>
    <summarizedField>Complaint_Cost__c.Price__c</summarizedField>
    <summaryForeignKey>Complaint_Cost__c.Case_Id__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>