SynProdGITV1/force-app/main/default/objects/Case/fields/X3rd_Party_Complaint__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Complaint__c</fullName>
    <description>Indicates whether the case involves a complaint raised by or against a third-party entity.</description>
    <inlineHelpText>The case involves a complaint that was submitted by a third party (e.g., supplier, partner, or external agency) or is related to a third-party issue</inlineHelpText>
    <label>3rd Party Complaint</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>