SynProdGITV1/force-app/main/default/objects/Case/fields/X3rd_Party_Details__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Details__c</fullName>
    <description>Long text to put the details of Supplier NC details</description>
    <inlineHelpText>Enter relevant details about the third party involved in this case</inlineHelpText>
    <label>3rd Party Details</label>
    <length>12500</length>
    <type>LongTextArea</type>
</CustomField>