SynProdGITV1/force-app/main/default/objects/Case/validationRules/Cannot_Open_Closed_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Open_Closed_Case</fullName>
    <active>true</active>
    <description>Block users from opening a closed case</description>
    <errorConditionFormula>AND(ISCHANGED(Status ),ISPICKVAL(PRIORVALUE(Status), &apos;Completed&apos;),   NOT($Permission.Open_Closed_Case) )</errorConditionFormula>
    <errorMessage>The case is closed, you cannot re-open it. Please raise a request to re-open it.</errorMessage>
</ValidationRule>