SynProdGITV1/force-app/main/default/objects/Case/validationRules/Prevent_Case_Owner_Update_On_Completion.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Case_Owner_Update_On_Completion</fullName>
    <active>true</active>
    <description>Prevents users from changing the Case Owner when the Case status is set to Completed.</description>
    <errorConditionFormula>AND(ISCHANGED(OwnerId), 
					ISPICKVAL(Status, &quot;Completed&quot;)
					)</errorConditionFormula>
    <errorMessage>You cannot change the Case Owner when the case is marked as &apos;Completed&apos;.</errorMessage>
</ValidationRule>