SynProdGITV1/force-app/main/default/objects/Case/listViews/All_Cases_OC.listView-meta.xml
<ListView>
    <fullName>All_Cases_OC</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>External_Case_Id__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Service_Team__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Cases (Open &amp; Closed)</label>
</ListView>