SynProdGITV1/force-app/main/default/objects/Case/listViews/All_Cases_Reported_By_Me.listView-meta.xml
<ListView>
    <fullName>All_Cases_Reported_By_Me</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Reported_By_Me__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Cases Reported By Me</label>
</ListView>