SynProdGITV1/force-app/main/default/objects/Case/listViews/Cases_Related_to_My_Service_Team.listView-meta.xml
<ListView>
    <fullName>Cases_Related_to_My_Service_Team</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Service_Team__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_User_part_of_Service_Team_Member__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Cases Related to My Service Team</label>
</ListView>