SynProdGITV1/force-app/main/default/objects/Case/listViews/Default_Case_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Default_Case_Queue_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>Service_Team__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CreatedBy_Name__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Case_Age__c</columns>
    <columns>Severity__c</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Queue</filterScope>
    <label>Default Case Queue</label>
    <queue>Default_Case_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>