SynProdGITV1/force-app/main/default/objects/Case/listViews/My_Case_Team_Cases.listView-meta.xml
<ListView>
    <fullName>My_Case_Team_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>Service_Team__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CreatedBy_Name__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Case_Age__c</columns>
    <columns>Severity__c</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Team</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Case Team Cases</label>
</ListView>