SynProdGITV1/force-app/main/default/objects/Case/listViews/MyCases.listView-meta.xml
<ListView>
    <fullName>MyCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>Service_Team__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CreatedBy_Name__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Case_Age__c</columns>
    <columns>Severity__c</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Cases</label>
</ListView>